[package]
name = "arrest"
version = "0.1.0"
edition = "2018"
readme = "README.md"
license = "MIT"
edition = "2018"
authors = ["Said van de Klundert"]
description = "Async Rest client"
repository = "https://github.com/saidvandeklundert/arrest"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
